--- a/Assignment/output/company.html
+++ b/Assignment/output/company.html
@@ -23,7 +23,46 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                
+                <div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Q</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: ucibootcamp@gmail.com</li>
+            <li class="list-group-item">Email: <a href="mailto:undefined">undefined</a></li>
+            <li class="list-group-item">Office number: 1</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Sean</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: ucibootcamp2@gmail.com</li>
+            <li class="list-group-item">Email: <a href="mailto:999">999</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/something punny" target="_blank" rel="noopener noreferrer">something punny</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Chris</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: clivingstonav@gmail.com</li>
+            <li class="list-group-item">Email: <a href="mailto:777">777</a></li>
+            <li class="list-group-item">School: UCI Bootcamp</li>
+        </ul>
+    </div>
+</div>
+
             </div>
         </div>
     </div>
