--- a/TeamProfileGen/output/company.html
+++ b/TeamProfileGen/output/company.html
@@ -25,40 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">jim</h2>
+        <h2 class="card-title">Chris</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: something</li>
+            <li class="list-group-item">ID: clivingstonav@gmail.com</li>
             <li class="list-group-item">Email: <a href="mailto:undefined">undefined</a></li>
-            <li class="list-group-item">Office number: 2</li>
+            <li class="list-group-item">Office number: 1</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">a</h2>
+        <h2 class="card-title">Matt</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: a</li>
-            <li class="list-group-item">Email: <a href="mailto:a">a</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/a" target="_blank" rel="noopener noreferrer">a</a></li>
+            <li class="list-group-item">ID: someemail@gmail.com</li>
+            <li class="list-group-item">Email: <a href="mailto:2">2</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/somegit" target="_blank" rel="noopener noreferrer">somegit</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">chris</h2>
+        <h2 class="card-title">Jalke</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: somthing</li>
-            <li class="list-group-item">Email: <a href="mailto:2">2</a></li>
-            <li class="list-group-item">School: uci</li>
+            <li class="list-group-item">ID: antheremail@gmail.com</li>
+            <li class="list-group-item">Email: <a href="mailto:3">3</a></li>
+            <li class="list-group-item">School: Palo Verde</li>
         </ul>
     </div>
 </div>
